# ESP32-Car

./: .gitignore  CMakeLists.txt  Project.puml  Readme.md  Student.puml  Voulnteer.puml  doxyfile  doxyfile.bak  platformio.ini  sdkconfig  sdkconfig.2024Hardware  sdkconfig.default  sdkconfig.defaults  sdkconfig.defaults.esp32c2  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32h2  sdkconfig.defaults.esp32s3  sdkconfig.old
.github/workflows/: Esp-Idf-Action.yml
Rover and Remote Arduino Sketches/Remote_Example_ESPNOW/: Remote_Example_ESPNOW.ino
Rover and Remote Arduino Sketches/Rover_Example_ESPNOW.ino/: Rover_Example_ESPNOW.ino.ino
Rover and Remote Arduino Sketches/Rover_basic_Sketch/: Rover_basic_Sketch.ino
components/BLE/: CMakeLists.txt  ble.cpp  characteristic.cpp  device.cpp  joystick.cpp  service.cpp
components/BLE/include/: ble.hpp  characteristic.hpp  device.hpp  joystick.hpp  service.hpp
components/CPPLEDC/: CMakeLists.txt  cppledc.cpp  (+1 more)
components/Car/: CMakeLists.txt  car.cpp  idf_component.yml  motor.cpp
components/Car/IR/: IrNECParser.cpp  Transceiver.cpp  Transciever.cpp  ir_nec_encoder.c
components/Car/IR/include/: IrNECParser.hpp  Transceiver.hpp  Transciever.hpp
components/Car/include/: buzzer.hpp  car.hpp  motor.hpp
components/Car/motorMixing/: IMotorMixingStrategy.cpp  NoZeroTurnMix.cpp  TankMix.cpp  TankMixWithTurbo.cpp
components/Car/motorMixing/include/: IMotorMixingStrategy.hpp  NoZeroTurnMix.hpp  TankMix.hpp  TankMixWithTurbo.hpp
main/: CMakeLists.txt  ble.cpp  ble.hpp  device.cpp  device.hpp  main.cpp  spp_client_demo.cpp
(+30 files in other folders)
